--- a/src/app/me/page.module.css
+++ b/src/app/me/page.module.css
@@ -11,9 +11,11 @@
 }
 
 .mainContent {
-  display: flex;
+display: flex;
 gap: 20px;
-flex-direction: column;
+justify-content: space-between;
+flex-wrap: wrap;
+
   
 }
 
@@ -65,4 +67,5 @@ gap: 10px;
 .booksContainer {
   display: flex;
   gap: 16px;
+  flex-direction: row;
 }
