feat: fix profile section

--- a/src/components/ReviewCard/ReviewCard.module.css
+++ b/src/components/ReviewCard/ReviewCard.module.css
@@ -23,7 +23,7 @@
 
 .info {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: space-between;
   gap: 10px;
 }
@@ -48,4 +48,11 @@
 .description {
   font-size: 12px;
   color: white;
+}
+
+.wrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
