--- a/src/components/ProfileSection/ProfileSection.module.css
+++ b/src/components/ProfileSection/ProfileSection.module.css
@@ -37,5 +37,69 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
+}
+
+.filename {
+  color: white;
+  font-size: 16px;
+}
+
+.wrapfile {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.controlsBtn {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.btn {
+  border-radius: 25px;
+  background-color: rgb(43, 19, 19, 0.7);
+  border: none;
+  padding: 10px;
+  width: 160px;
+  max-height: 44;
+  color: #ffffff;
+  font-weight: 700;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: rgb(43, 19, 19, 1);
+}
+
+.contentWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.info {
+  color: white;
+  font-size: 16px;
+}
+
+.redInfo {
+  display: flex;
+  gap: 8px;
+}
+
+.textare {
+  height: 74px;
+  background-color: rgb(255, 255, 255, 0.8);
+  border-radius: 25px;
+  border: none;
+  outline: none;
+  padding: 15px;
+  transition: 0.3s;
+  resize: none;
+}
+
+.textare:focus {
+  background-color: rgb(255, 255, 255, 1);
 }
