--- a/src/app/reviews/[id]/page.module.css
+++ b/src/app/reviews/[id]/page.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 20px;
 }
 
 .mainContent {
@@ -18,15 +18,188 @@
 }
 
 .pageTitle {
+  color: #e7e7e7;
+  font-size: 40px;
+  font-weight: 500;
+}
+
+.pageTitleBook {
   color: #fff;
   font-size: 60px;
   font-weight: 700;
 }
 
+.comments {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
 
 .avatar {
   position: relative;
-  width: 32px;
-  height: 32px;
+  width: 54px;
+  height: 54px;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+.comment {
+  display: flex;
+  gap: 10px;
+}
+
+.commentContent {
+  position: relative;
+  min-width: 200px;
+  display: flex;
+  align-items: center;
+  padding: 2px 20px;
+  background: white;
+  border-radius: 18px;
+}
+
+.text {
+  font-size: 14px;
+  font-size: 500;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background-color: rgba(43, 19, 19, 0.4);
   border-radius: 16px;
+  padding: 20px 16px;
+}
+
+.btn {
+  min-width: 140px;
+  border-radius: 25px;
+  background-color: rgb(43, 19, 19, 0.7);
+  border: none;
+  padding: 10px;
+  width: 140px;
+  max-height: 44px;
+  color: #ffffff;
+  font-weight: 700;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: rgb(43, 19, 19, 1);
+}
+
+.spcBtn {
+  min-width: fit-content;
+  width: fit-content;
+  border-radius: 8px;
+}
+
+.btnRight {
+  align-self: flex-end;
+}
+
+.red {
+  display: flex;
+  gap: 20px;
+}
+
+.etxtarea {
+  width: 100%;
+  height: 40px;
+  resize: none;
+}
+
+.mainReview {
+  min-height: 220px;
+  padding: 18px 54px 44px 18px;
+  position: relative;
+  width: 100%;
+  background-color: rgba(43, 19, 19, 0.8);
+  border-radius: 25px;
+}
+
+.mainReviewRate {
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  color: white;
+  font-size: 16px;
+  font-weight: 900;
+}
+
+.controls {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.mainReviewText {
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.mainReviewDate {
+  color: white;
+  font-size: 16px;
+  font-weight: 900;
+}
+
+.commentLike {
+  padding: 6px 4px;
+  border: none;
+  position: absolute;
+  right: -36px;
+  top: 0px;
+  border-radius: 50%;
+}
+
+.heart {
+  position: relative;
+  width: 20px;
+  height: 15px;
+}
+
+.heart::before,
+.heart::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 10px;
+  height: 16px;
+  border-radius: 20px 20px 0 0;
+  background-color: #999092;
+}
+
+.heart:hover::after,
+.heart:hover::before {
+  background-color: #3b2525;
+  cursor: pointer;
+}
+
+.isLiked::after, .isLiked::before {
+  background-color: #3b2525;
+}
+
+.heart::before {
+  left: 10px;
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+}
+
+.heart::after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
+}
+
+.newReviewArea {
+  width: 80%;
+  height: 120px;
+  resize: none;
 }
