--- a/src/components/ProfileSection/ProfileSection.module.css
+++ b/src/components/ProfileSection/ProfileSection.module.css
@@ -61,8 +61,8 @@
   background-color: rgb(43, 19, 19, 0.7);
   border: none;
   padding: 10px;
-  width: 160px;
-  max-height: 44;
+  width: 140px;
+  max-height: 44px;
   color: #ffffff;
   font-weight: 700;
   transition: 0.3s;
