--- a/src/components/FriendCard/FriendCard.module.css
+++ b/src/components/FriendCard/FriendCard.module.css
@@ -24,8 +24,8 @@
 
 .imageWrapper {
   position: relative;
-  width: 72px;
-  height: 72px;
+  width: 85px;
+  height: 85px;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -46,7 +46,7 @@
 .deleteFriendButton {
   border-radius: 25px;
   background-color: rgb(221, 163, 200, 0.7);
-  border: 1px solid rgb(43, 19, 19, 0.7);
+  border: none;
   padding: 10px;
   width: 160px;
   height: 50px;
@@ -84,3 +84,4 @@
   justify-content: center;
   align-items: center;
 }
+
