--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   border-radius: 25px;
+  gap: 10px;
   background: rgba(255, 255, 255, 0.70);
 }
 
@@ -13,4 +14,37 @@
 }
 
 .searchInput {
+  flex-grow: 1; 
+  padding: 8px 12px; 
+  border: none; 
+  outline: none; 
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, -0.3);
+}
+
+.searchButton {
+  border-radius: 25px;
+  border: none;
+  background-color: rgba(255, 255, 255, -0.3);
+  width: 50px;
+  height: 50px;
+  color: #ffffff;
+  font-weight: 700;
+
+}
+
+.searchDeleteButton {
+  border-radius: 25px;
+  border: none;
+  background-color: rgba(255, 255, 255, -0.3);
+  width: 50px;
+  height: 50px;
+  color: #ffffff;
+  font-weight: 700;
+}
+
+.searchDeleteIcon {
+  width: 30px;
+  height: 30px;
+  opacity: 0.7;
 }
