feat: add ant design components

--- a/src/app/book/[id]/page.module.css
+++ b/src/app/book/[id]/page.module.css
@@ -22,38 +22,38 @@
   font-weight: 700;
 }
 
-.tabsWrapper {
-  padding: 10px 20px;
+div.tabsWrapper {
+  padding: 10px 0px;
   display: flex;
   gap: 20px;
   border-radius: 25px;
   overflow: scroll;
-  background: rgba(255, 255, 255, 0.7);
+  scrollbar-width: none;
 }
 
-.tab {
+div.tab {
   padding: 16px 18px;
   border-radius: 25px;
   background: rgba(89, 98, 117, 0.8);
   transition: 0.3s;
 }
 
-.tab:hover {
+div>.tab:hover {
   cursor: pointer;
   background: rgba(0, 0, 0, 0.8);
 }
 
-.tab.selected {
+div.tab.selected {
   background: rgba(0, 0, 0, 0.8);
 }
 
-.tabTitle {
+div.tabTitle {
   color: #fff;
   font-size: 18px;
   font-weight: 700;
 }
 
-.quote {
+div.quote {
   padding: 20px;
   width: 300px;
   height: 300px;
@@ -61,17 +61,19 @@
   flex-direction: column;
   gap: 32px;
   border-radius: 25px;
-  background-color: rgb(31, 27, 27);
+  background-color: rgb(31, 27, 27, 0.7);
   transition: 0.3s;
+  border-color: rgb(31, 27, 27, 0.7);
+  font-family: "Poppins", sans-serif;
 }
 
-.title {
+h3>.title {
   color: #fff;
   font-size: 24px;
   font-weight: 700;
   max-width: 600px;
 }
-.description {
+p.description {
   color: #fff;
   font-size: 12px;
 }
