--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -1,21 +1,21 @@
-.page {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+div > .page {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100dvh;
   width: 100%;
+  overflow: hidden;
 }
 
-.glass {
+div > .glass {
   padding: 100px 10px 70px;
   width: 100%;
   height: 100%;
   backdrop-filter: blur(20px);
   margin: 50px;
   border-radius: 40px;
-  display: flex;
-  flex-direction: column;
-  gap: 70px;
 }
 
 .controls {
@@ -25,20 +25,14 @@
   gap: 30px;
 }
 
-.loginWrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 44px;
-}
-
-.title {
-  font-size: 80px;
+div > .title {
+  font-family: "Poppins", sans-serif;
+  font-size: 70px;
   font-weight: 700;
   color: white;
 }
 
-.loginButton {
+div > button.loginButton {
   width: fit-content;
   padding: 5px 28px;
   color: white;
@@ -46,18 +40,19 @@
   border-radius: 20px;
   background-color: rgba(255, 255, 2550, 0.6);
   border: 2px solid transparent;
+  font-family: "Poppins", sans-serif;
 }
 
-.input {
+div > .input {
   padding: 10px 28px;
   width: 250px;
-  height: 28px;
   border-radius: 20px;
   background-color: rgba(255, 255, 2550, 0.6);
   border: 2px solid transparent;
   font-size: 18px;
-  color: white;
-  transition: .3s all;
+  color: grey;
+  transition: 0.3s all;
+  font-family: "Poppins", sans-serif;
 }
 
 .input:focus {
@@ -77,7 +72,7 @@
   gap: 16px;
 }
 
-.signUpButton {
+button.signUpButton {
   width: fit-content;
   padding: 5px 28px;
   font-size: 24px;
@@ -87,7 +82,8 @@
   border: 2px solid transparent;
 }
 
-.tip {
+div > .tip {
+  font-family: "Poppins", sans-serif;
   color: white;
   font-size: 16px;
 }
