--- a/src/components/ReviewCard/ReviewCard.module.css
+++ b/src/components/ReviewCard/ReviewCard.module.css
@@ -10,11 +10,11 @@
   transition: 0.3s;
 }
 .card {
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
 .card::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none; 
 }
 .card:hover {
   cursor: pointer;
