--- a/src/components/WriteReviewButton/WriteReviewButton.module.css
+++ b/src/components/WriteReviewButton/WriteReviewButton.module.css
@@ -1,12 +1,13 @@
 .card {
   width: 300px;
+  height: 300px;
   background-color: rgb(80, 33, 69, 0.8);
   border-radius: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
   text-align: center;
   padding: 30px 20px;
 }
