--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,3 +122,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+
+/* .my-burofitton-light {
+  background-color: green !important;
+}
+
+.my-button-dark {
+  background-color: red !important;
+} */
