--- a/src/components/BookReviewStartCard/BookReviewStartCard.module.css
+++ b/src/components/BookReviewStartCard/BookReviewStartCard.module.css
@@ -3,7 +3,7 @@
   width: 300px;
   height: 300px;
   border-radius: 25px;
-  background-color: rgba(80, 33, 69, 0.9);
+
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -11,6 +11,13 @@
   justify-content: center;
 }
 
+.card-light {
+  background-color: rgba(80, 33, 69, 0.9);
+}
+
+.card-dark {
+  background-color: #6c5ce74d;
+}
 .card:hover {
   cursor: pointer;
 }
