--- a/src/components/ChallengeForm/ChallengeForm.module.css
+++ b/src/components/ChallengeForm/ChallengeForm.module.css
@@ -1,20 +1,30 @@
 .challenge {
   display: flex;
   flex-direction: column;
-  background-color: rgb(43, 19, 19, 0.8);
   border-radius: 25px;
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 20px;
+  gap: 250px;
   padding: 10px;
 }
 
+.challenge-light {
+  background-color: rgb(43, 19, 19, 0.8);
+}
+
+.challenge-dark {
+  background-color: #fab1a066;
+}
+
 .formTitle {
-  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  height: 80px;
   background-color: rgb(43, 19, 19, 0.8);
   border-radius: 25px;
-  text-align: center;
 }
 
 .bookNumber {
@@ -65,7 +75,7 @@
 .challengeSendButton {
   border-radius: 25px;
   background-color: #dda3c899;
-  border: 1px solid rgb(43, 19, 19, 0.7);
+  border: none;
   padding: 10px;
   width: 160px;
   height: 50px;
@@ -76,5 +86,5 @@
 
 .challengeSendButton:hover {
   cursor: pointer;
-  background-color: rgb(43, 19, 19, 0.8);
+  background-color: #dda3c8;
 }
