--- a/src/components/PageWrapper/PageWrapper.module.css
+++ b/src/components/PageWrapper/PageWrapper.module.css
@@ -7,3 +7,11 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.pageWrapper-dark {
+ background: linear-gradient(to bottom, #2d3436, #4d575a);
+}
+
+.pageWrapper-light {
+  background-color: black;
+}
