--- a/src/components/WriteReviewButton/WriteReviewButton.module.css
+++ b/src/components/WriteReviewButton/WriteReviewButton.module.css
@@ -1,7 +1,6 @@
 .card {
   width: 300px;
   height: 300px;
-  background-color: rgb(80, 33, 69, 0.8);
   border-radius: 30px;
   display: flex;
   flex-direction: column;
@@ -12,6 +11,13 @@
   padding: 30px 20px;
 }
 
+.card-light {
+  background-color: rgb(80, 33, 69, 0.8);
+}
+
+.card-dark {
+  background-color: #6c5ce74d;
+}
 .card:hover {
   cursor: pointer;
 }
